# Trainable_Low_Rank_RNN

./: .gitignore  README.md  pyproject.toml  test_empty_params.py
configs/: contextual_switch_default.yaml  contextual_switch_full_rank.yaml  contextual_switch_large.yaml  contextual_switch_sanity.yaml  contextual_switch_stable.yaml  temporal_decision_R1.yaml  temporal_decision_default.yaml  temporal_decision_full_rank.yaml  temporal_decision_hard.yaml  temporal_decision_hard_full_rank.yaml  temporal_decision_hard_test.yaml  temporal_decision_test.yaml
scripts/: run_eval_context_switch.sh  run_sanity_check.sh  run_tests.sh  run_train_context_switch.sh  run_train_temporal_decision.sh  visualize_temporal_decision_data.py
src/: __init__.py  config.py
src/analysis/: __init__.py  inspect_lowrank.py  plot_trajectories.py
src/data/: __init__.py  contextual_switch_dataset.py  temporal_decision_dataset.py
src/models/: __init__.py  integrators.py  lowrank_rnn.py
src/training/: __init__.py  losses.py  metrics.py  train_context_switch.py  train_temporal_decision.py
tests/: test_config.py  test_dataset.py  test_integrators.py  test_losses_and_metrics.py  test_lowrank_rnn.py  test_training_step.py
